[workspace]

[package]
name    = "e2e-apisrv-server"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum               = "0.8.4"
bytes              = "1.10.1"
ed25519-dalek      = { version = "2.1.1", features = ["rand_core"] }
figment            = { version = "0.10.19", features = ["toml", "env"] }
hex                = "0.4.3"
patchify           = { path = "../.." }
rand               = "0.8.5"
reqwest            = "0.12.19"
rubedo             = "0.6.4"
semver             = { version = "1.0.26", features = ["serde"] }
serde              = { version = "1.0.219", features = ["derive"] }
sha2               = "0.10.9"
tempfile           = "3.20.0"
tokio              = { version = "1.45.1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal"] }
tower-http         = { version = "0.6.6", features = ["trace"] }
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
velcro             = "0.5.4"
