[workspace]

[package]
name    = "e2e-apisrv-srvapp-v2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum               = "0.7.5"
bytes              = "1.7.1"
ed25519-dalek      = { version = "2.1.1", features = ["rand_core"] }
hex                = "0.4.3"
patchify           = { path = "../.." }
rand               = "0.8.5"
reqwest            = "0.12.7"
rubedo             = "0.6.1"
semver             = { version = "1.0.23", features = ["serde"] }
serde              = { version = "1.0.210", features = ["derive"] }
sha2               = "0.10.8"
tempfile           = "3.12.0"
tokio              = { version = "1.40.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal"] }
tower-http         = { version = "0.5.2", features = ["trace"] }
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
